[project]
name = "gpu-health-check"
version = "0.1.0"
description = "A repo detailing how to evaluate the health of a GPU."
authors = [{ name = "jack-norrie", email = "jacknorrie6785@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "^3.12"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "matplotlib (>=3.10.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
